@@ -1,3 +1,7 @@
+2011-10-26  Paul Koning  <paul_koning@dell.com>
+
+	* python/lib/gdb/types.py (deepitems): New function.
+	
 2011-10-25  Paul Koning  <paul_koning@dell.com>
 
 	PR python/13327
